# SimpleCppProject

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
container/: CMakeLists.txt  person.cpp  person.h
test/: CMakeLists.txt  person_test.cpp
